Build: 8	Version: 1.1	Branch: Master

	* ssqt.pro: Removed references to "ssqtprop.hpp" file.