@@ -1,0 +1,7 @@
+<item id="numeric identifier" name="unique name"
+  title="short text"
+  desc="description to show in the status bar"
+  keys="shortcut keys separated by commas"
+  icon="icon resource name or number"
+  checked="true or false"
+  />
